# ScriptsizeFSM

./: .clang-format  README.md  meson.build
examples/: extended_switch.cpp  multiple_instances.cpp  simple_switch.cpp
scriptsizefsm/: scriptsizefsm.hpp
tests/: extended_switch.cpp  meson.build  multiple_instances.cpp  simple_switch.cpp
